dashboard/crates/sf-panels/src/snapshots/sf_panels__snapshot_tests__header__compact.snap
---
source: crates/sf-panels/src/snapshot_tests.rs
expression: as_text(&buf)
---
 SUMOFISH  live v1 ● lichess  in v1
 rapid 2365±63 bullet 1950±69   7W 2D 4L
