dashboard/crates/sf-panels/src/snapshots/sf_panels__snapshot_tests__header__full.snap
---
source: crates/sf-panels/src/snapshot_tests.rs
expression: as_text(&buf)
---
 SUMOFISH  live v1 ● lichess  in v1
──────────────────────────────────────────────────────────────
